Add affiliate shortcode (uses AFFILIATE_AMAZON env var)

--- a/layouts/shortcodes/affiliate.html
+++ b/layouts/shortcodes/affiliate.html
@@ -1,4 +1,1 @@
-<a href="{{ .Get "url" }}" target="_blank" rel="nofollow noopener">
-  {{ .Get "title" }}
-</a>
-<p>{{ .Get "description" }}</p>
+# ...contents...
